--- a/configs/ghostty/config
+++ b/configs/ghostty/config
@@ -3,6 +3,7 @@ theme = xcodedarkhc
 shell-integration = fish
 
 font-size = 12
+font-family = "Hack Nerd Font"
 
 background-opacity = 0.7
 background-blur-radius = 10
